@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: canvText.test,v 1.20 2008/10/08 16:13:42 dgp Exp $
+# RCS: @(#) $Id: canvText.test,v 1.21 2008/10/11 06:47:25 dkf Exp $
 
 package require tcltest 2.2
 namespace import ::tcltest::*
@@ -819,7 +819,13 @@ test canvText-14.5 {GetTextIndex procedure: bad int or unknown index} -setup {
 } -cleanup {
 	.c delete test
 } -returnCodes {error} -result {bad index "xyz"}
-
+test canvText-14.6 {select clear errors} -setup {
+    .c create text 0 0 -tag test
+} -body {
+    .c select clear test
+} -cleanup {
+    .c delete test
+} -returnCodes error -result "wrong \# args: should be \".c select clear\""
 
 test canvText-15.1 {SetTextCursor procedure} -setup {
 	.c create text 0 0 -tag test
